# agentup_image

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  code-quality.yml  release.yml
examples/: test_multimodal.py
src/agentup_image/: __init__.py  plugin.py  processor.py
src/image_vision/: plugin.py  processor.py
tests/: __init__.py  test_plugin.py  test_processor.py
